--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,9 @@
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
     {% include head-custom.html %}
   </head>
-  <body>
+
+  <!-- Set up class functionality -->
+  <body class="{{ page.body_class }}">
     <a id="skip-to-content" href="#content">Skip to the content.</a>
 
     <header class="page-header" role="banner">
