--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,7 +5,6 @@
 
 
 // Site navigation
-
 .site-nav {
   margin-top: 1.5rem;
 }
@@ -19,4 +18,19 @@
 
 .site-nav a:hover {
   text-decoration: underline;
+}
+
+// Project page
+.page-projects img {
+  max-width: 300px;
+  height: auto;
+  float: right;
+  display: block;
+  clear: right;
+  margin: 0 0 15px 20px;
+}
+
+.projects-page h2 {
+  margin-top: 60px;
+  clear: both;
 }
