Improve resume formatting and add downloads

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -34,3 +34,16 @@
   margin-top: 60px;
   clear: both;
 }
+
+// Resume page
+.resume-page h1 {
+  margin-top: 60px;
+}
+
+.resume-page h2 {
+  margin-bottom: 5px;
+}
+
+.resume-page p {
+  margin-bottom: 10px;
+}
