Fix navigation links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -60,12 +60,12 @@
           Home
         </a>
 
-        <a href="{{ '/projects/' | relative_url }}"
+        <a href="{{ '/projects.html' | relative_url }}"
           class="{% if page.url contains '/projects' %}active{% endif %}">
           Projects
         </a>
 
-        <a href="{{ '/resume/' | relative_url }}"
+        <a href="{{ '/resume.html' | relative_url }}"
           class="{% if page.url contains '/resume' %}active{% endif %}">
           Resume
         </a>
